login form is showing again, fixed content being cut off on the bottom of the screen

--- a/client/sass/components/_content.scss
+++ b/client/sass/components/_content.scss
@@ -3,8 +3,8 @@
   position: absolute;
   top: 44px;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
   overflow: auto;
   background-image: url('../static/light-grey-pattern.jpg');
 
